--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -60,7 +60,7 @@
         }
       ],
       "dataSources": [],
-      "demoUrl": "https://www.youtube.com/watch?v=fOIoMYNXhQE",
+      "demoUrl": "https://www.youtube.com/embed/fOIoMYNXhQE",
       "technologies": [
         "openai-whisper",
         "jiwer",
