--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -286,7 +286,7 @@
           "imageSrc": "osm.png"
         }
       ],
-      "demoUrl": "https://www.youtube.com/embed/lIDKO1tNgUs",
+      "demoUrl": "https://www.youtube.com/embed/68XVxC6daig",
       "technologies": [
         "joblib",
         "react-leaflet",
