--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -142,7 +142,7 @@
           "imageSrc": "husbanken_logo.png"
         }
       ],
-      "demoUrl": "https://explain-public-services.streamlit.app",
+      "demoUrl": "https://www.youtube.com/embed/GgHTWc32vtw",
       "inProgress": true,
       "technologies": [
         "pdfminer.six",
