--- a/src/shared/opensource/projects.json
+++ b/src/shared/opensource/projects.json
@@ -213,7 +213,7 @@
           "imageSrc": "met_norway.png"
         }
       ],
-      "demoUrl": "https://electricity-forecast-sushant.streamlit.app",
+      "demoUrl": "https://www.youtube.com/embed/GAKTtiNIRG0",
       "inProgress": true,
       "technologies": [
         "joblib",
